--- a/source/scss/components/_landing.scss
+++ b/source/scss/components/_landing.scss
@@ -64,7 +64,7 @@
 			}
 
 			&:after {
-				background-position: -95px -44px;
+				background-position: -196px -43px;
 	
 				// @-moz-document url-prefix() { 
 				// 	background-position: -145px -42px;
